--- a/_posts/thesis_chapters/2025-7-5-Design_v16.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v16.md
@@ -557,47 +557,55 @@ Table 1.2.  Key Features of 3M Game Making Model
 
 ### Chapter conclusion
 
-- summary of methodology
+<!-- - summary of methodology
 - results
 - signposting
 
-**methodology**
+**methodology** -->
 
-This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process.
+This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. It has described three contradictions that occurred during an iterative, phase-based approach using a methodology guided by techniques of DBR and CHAT. The contradictions explored initially focused on technical and then more social dimensions of the learning design.
 
-Regarding methodology,  the the process of describing the design via design narrative, this process been so extensive we could refer to it as a design voyage.
+Regarding methodology, the emergent and mutual nature of this design process aligns with both DBR principles and CHAT concepts of transformation in tool use based on explicit and implicit feedback. The descriptions of this chapter also show the process to be demanding on participants. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the challenges of beginning with such an incomplete pedagogy. The design narrative above has acknowledges my active input into the direction of the process in line with an active approach to steering  the design towards collaborative learning opportunities [@stetsenko2020radical]. My reflective analysis within journal entries show that While this general direction was present from early stages, my this on-going process served a purpose to divine a deeper understanding of my own guiding motivations driving the design changes [^46].
 
-The emergent and mutual nature of this design process aligns with both DBR principles and CHAT concepts of transformational agency by double stimulation (TADS). Specifically, transformation in tool use based on explicit and implicit feedback.
+<!--
+THIS WOUDL GO IN CH. 4
+The design approach that followed the moments of contraction outlined above  was responsive and uncertain. The process requiring me to rapidly generate and adapt software, documentation and processes in response to rapid identification and analysis of manifestations of emerging conflicts.   -->
 
-The design approach that followed the moments of contraction outlined above  was responsive and uncertain. The process requiring me to rapidly generate and adapt software, documentation and processes in response to rapid identification and analysis of manifestations of emerging conflicts.  
-
-The descriptions of this chapter also show the process to be demanding on participants. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the challenges introduced incomplete design.
-
-The design narrative above has acknowledges my active input into the direction of the process in line with an active approach to steering  the design towards collaborative learning opportunities [maybe footnote] [@stetsenko2020radical]. My reflective analysis within journal entries show that While this general direction was present from early stages, my this on-going process served a purpose to divine a deeper understanding of my own guiding motivations driving the design changes [^46].
-
-
-This chapter has described three contradictions that occurred during an iterative, phase-based approach using a methodology guided by techniques of DBR and CHAT.
-The contradictions explored initially focused on technical and then more social dimensions of the learning design.
-
-LINK FROM HERE TO START OF CH.6 GERM CELL / SCOPE
+<!-- LINK FROM HERE TO START OF CH.6 GERM CELL / SCOPE -->
 
 **Results**
-Turing to a sumary of the results of the process,
-
-The use of a design narrative processes informed by  DBR practice [@hoadley_creating_2002] has been employed to share detailed and replicable approach . With that aim in mind the following list shares links to currently online and reusable resources [^44].
-
-A further output here is a greater precision of  the barriers, congruencies and tensions involved in achieving the varied competencies needed to complete the text coding of a game project. Table 5.2 shows a summary of some of the tensions and design resolutions that emerged from the process.
-
-INSERT TABLE OF THE DESIGN FACTORS.
-
-Table 5.2- Table of emerging tensions and design responses
-
-
+Turing to a summary of the results of the process, the use of a design narrative processes informed by DBR practice [@hoadley_creating_2002] has been employed to share not only the detail of the end results but also the emerging tensions that drove them and replicable approach. With that aim in mind the following list shares links to currently online and reusable resources [^44].
 
 - P2-3 Starting Game Template: https://codepen.io/mrmick/pen/gbaOEgB?editors=0010
 - Menu of GDPs: https://jamm-labs.github.io/ggcp/ggc-examples/
 - Manual: http://3m.flossmanuals.net
 - Manual Splash page: https://jamm-labs.github.io/ggcp/manual
+
+
+To enable a summative view of the contradictions involved in the resulting learning design, Table 5.2 shows a summary of some of the barriers, congruencies and tensions and design resolutions that emerged from the process.
+
+INSERT TABLE OF THE DESIGN FACTORS.
+
+| **Tension, Barrier or Congruence emerging in Game Making** | **How design addresses this issue [and location of supporting analysis]** |
+|------------------------------------------------------------|----------------------------------------------------------------------------|
+| **Category One – Tool use for coding and asset creation processes** | |
+| Congruence: Learners interested in video games are motivated to create their own game. | The use of a common game format helps address barriers to text coding, providing clear motivation in terms of a recognisable end project goal. |
+| Tension: Guidance is needed in order to make changes, but there is potential for learner disengagement if game coding is taught from first principles, especially for younger participants. | Learners start with a half-working minimal game template, which requires only minimal code changes to produce noticeable in-game feedback. |
+| Congruence: Learners interested in art want to create digital artwork to replace placeholder graphics. | An intuitive pixel art editor supports rapid character design, with clear code template signposting to help learners incorporate their artwork. |
+
+| **Category Two – Documentation and Navigation** | |
+| Barrier: Learners take on game genres or features too complex for their current coding ability. | Game type is limited to a single genre; missions are capped in complexity. GDPs are scaffolded to start with low-threshold/high-impact patterns. |
+| Tension: Learners become frustrated when they cannot choose their next feature; facilitator capacity is strained by diverse pathways. | A menu of GDPs enables learners to select additions in a flexible order. This supports autonomy and motivation while keeping complexity manageable. |
+| Tension: Facilitators need to justify learning but may struggle to see it in situ if unfamiliar with game making. Formal skills frameworks can restrict flexibility. | A map of learning dimensions flexibly linked to GDPs and missions helps both learners and facilitators trace progress and identify learning. |
+| Tension: Reflection and documentation are valuable but interrupt creative flow. | Learner progress is traced on an attractive physical map displayed in the learning space, integrating reflection into the making process. |
+
+| **Category Three – Social and cultural barriers** | |
+| Congruence: Designing a game for a real audience is experienced as motivating. | Playtesting within sessions offers short-term motivation; end-of-project showcase events help learners prioritise and reflect on progress. |
+| Barrier: Learners may feel alienated from coding culture or the tools themselves. | Relatable code structures and role-based fictional scenarios help reduce anxiety and encourage engagement through role-play. |
+| Barrier: Participants may avoid written documentation or lack proactive planning skills. | Side missions and extended playtesting time support peer-to-peer sharing, allowing knowledge of GDPs and implementation techniques to circulate informally. |
+
+
+Table 5.2- Table of emerging tensions and design responses
 
 
 My observations, supported in the following chapter, indicate that the combination of the use of a template and a collection of GDPs accelerates the use of certain coding fluency practices, which, in turn, had a subsequent impact on the increased use of social coding processes.
@@ -766,7 +774,7 @@ For a recap of benefits see Chapter 2.
 
 [^45]: The process of developing shifting forms of agency is explored in more depth in Chapter 7
 
-[^46]: These reflections on my own deeper motivations are explored in the discussion section of Chapter 6 in relations to the complex and expanded object of activity of this research.
+[^46]: These reflections on my own deeper motivations are explored in the discussion section of Chapter 6 in relations to the complex and expanded object of activity of this research. ARE THEY?
 
 
 
